stronka na mobilne lepiej zoptymalizowana

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     width: 97,5%;
     height: 100px;
     
-    font-size: 65px;
+    font-size: 7vw;
     
     
   }
@@ -26,12 +26,12 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #a{
-width: 49%;
+ 
 
 }
 
 #b {
-  width: 49%;
+
   
 }
 
