--- a/main.css
+++ b/main.css
@@ -10,7 +10,20 @@
   }
 body {
   background-image: url(back.gif);
+  animation-name: example;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+
 }
+
+@keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+
 #ramkap {
   margin: auto;
   width: 100px;
