--- a/main.css
+++ b/main.css
@@ -4,12 +4,12 @@
     width: 97,5%;
     height: 100px;
     
-    font-size: 7vw;
+    font-size: 5vw;
     
     
   }
 body {
-  background-image: url(back.gif);
+  background-color: red;
   animation-name: example;
   animation-duration: 7s;
   animation-iteration-count: infinite;
@@ -35,6 +35,7 @@ border-radius: 25px;
 border: 1px solid gray;
 background-color: blanchedalmond;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+height: 5vw;
 
 }
 
