--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 body {
   background-color: red;
   animation-name: example;
-  animation-duration: 7s;
+  animation-duration: 4s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 
@@ -36,6 +36,7 @@ border: 1px solid gray;
 background-color: blanchedalmond;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 height: 5vw;
+text-align: center;
 
 }
 
