--- a/rainbow/main.css
+++ b/rainbow/main.css
@@ -20,6 +20,11 @@ input[type=text] {
     margin: auto; 
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0; 
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
   }
 
   @keyframes example {
